--- a/src/screens/apple.css
+++ b/src/screens/apple.css
@@ -122,3 +122,8 @@
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+
+.desktopIcon__title{
+	white-space: pre-wrap;
+	text-align: center;
+}
