--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 	position: absolute;
 	-webkit-backdrop-filter: blur(4px);
 	backdrop-filter: blur(4px);
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
 
 .ok_button{
